force-app/main/default/objects/Invoice/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number</label>
    <type>Text</type>
    <length>50</length>
    <description>Customer purchase order reference number</description>
</CustomField>