force-app/main/default/objects/Invoice/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Portal Status</label>
    <type>Picklist</type>
    <description>Portal-specific status overlay for invoice display</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>