force-app/main/default/objects/Invoice/fields/Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account__c</fullName>
    <label>Sold To Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>SoldToInvoices</relationshipName>
    <relationshipLabel>Sold To Invoices</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sold-to account when different from bill-to (BillingAccountId)</description>
</CustomField>